fixed spacing between logo across all breakpoints

--- a/app/assets/scss/_responsive.scss
+++ b/app/assets/scss/_responsive.scss
@@ -13,7 +13,9 @@
     position: relative;
 //    padding-right: 35px;
     }
-
+    .navbar-brand img {
+        height: 60px;
+    }
 
 
 }
@@ -27,7 +29,7 @@
         height: 58vh;
     }
     .nav > li > a {
-        padding: 15px 10px;
+        // padding: 15px 10px;
     }
     .nav>li>a:first-child {
     padding-left: 0;
@@ -36,6 +38,9 @@
     float: right;
     position: relative;
 //    padding-right: 35px;
+    }
+     .navbar-brand img {
+        height: 60px;
     }
 
 
@@ -52,6 +57,10 @@
     .jumbotron {
         height: 50vh;
     }
+    .navbar-brand img {
+        height: 90px;
+    }
+
 
 
     .main-menu .navbar-brand > img {
@@ -87,7 +96,7 @@
       .nav>li>a {
     // position: relative;
     // display: block;
-    padding: 20px 30px 5px 30px;
+    padding: 45px 30px 0px 30px;
     // font-size: 12px;
     // letter-spacing: 1px;
     }
@@ -215,5 +224,11 @@
   .jumbotron {
         height: 37vh;
     }
-
+    .navbar-brand {
+			height: 75px;
+			img {
+					height: 50px;
+			}
+    }
+    
 }
